fix(05-pages)!: add align-self: center for all insight page elements.

--- a/assets/css/05-pages.css
+++ b/assets/css/05-pages.css
@@ -11,5 +11,8 @@
   }
 
   /* [INSIGHT] */
-  #insight  { text-align: center; }
+  #insight  {
+    align-self: center;
+    text-align: center; 
+  }
 }
